@@ -1,3 +1,5 @@
+* #1953: Retrieve friends' nicks from the profile. (tomeu)
+
 Snapshot aa6a024368
 
 * #1825: Fix tab label padding. (marco)
